# OpenBell

./: README.md
Client/: package-lock.json  package.json  tailwind.config.js
Client/src/: App.jsx  index.css
Client/src/api/: index.js
Client/src/components/: ConfidenceChart.jsx  Navbar.jsx  SignalCard.jsx
Client/src/pages/: Accuracy.jsx  Dashboard.jsx  History.jsx  Predict.jsx  Settings.jsx  Watchlist.jsx
Server/: .env.example  .gitignore  alembic.ini  deps.py  main.py  pyproject.toml
Server/alembic/: env.py
Server/alembic/versions/: bfb8e508c6bc_create_users.py
Server/app/: main.py
Server/app/ai/: analyzer.py  client.py  prompts.py  tools.py
Server/app/core/: config.py  database.py
Server/app/models/: prediction.py  watchlist.py
Server/app/repositories/: prediction.py  watchlist.py
Server/app/routers/: predictions.py  settings.py  watchlist.py
Server/app/schemas/: prediction.py  settings.py  watchlist.py
Server/app/services/: excel.py  market_data.py  news.py  notification.py  orchestrator.py  pdf_report.py  report.py  seed.py
Server/core/: config.py
Server/db/: base.py  session.py
Server/models/: __init__.py  prediction.py  watchlist.py
Server/routers/: predictions.py  watchlist.py
Server/schemas/: prediction.py  watchlist.py
Server/services/: analysis.py  llm.py  market_data.py  news.py  scheduler.py  seed.py
