[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.89.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.43.0",
    "yfinance>=1.2.0",
]
