[project]
name = "openbell"
version = "2.0.0"
description = "LLM-powered next-day stock signal generator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "anthropic>=0.49",
    "pydantic-settings>=2.7",
    "yfinance>=0.2",
    "feedparser>=6.0",
    "httpx>=0.28",
    "twilio>=9.0",
    "openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]
